# odw-vault

./: .gitignore  BUILD_STATUS.md  BUSINESS_OVERVIEW.md  CLAUDE.md  CODE_REVIEW.md  CONTEXT_QUALITY_AUDIT.md  CONTEXT_RUN_TIMING.md  CONTEXT_SAMPLES.md  COST_ANALYSIS.md  DB_SCALING.md  DEVELOPER_GUIDE.md  EMBEDDING_LEARNINGS.md  EVAL_QA_100.md  EVAL_QA_100_v2.md  Full Technical Spec- Modern AI Chatbot UI.md  PART_2_STATUS.md  Pre-Flight Plan- Local RAG for Project Knowledge Base.md  Pre-Flight Question Checklist for RAG Projects.md  README.md  TEST_REPORT.md  Technical Specification Document- Local RAG Pipeline (Phases 8–14).md  Technical Specification Document- Local RAG Pre-Flight Pipeline.md  cli.py  config.example.toml  pyproject.toml
api/: __init__.py  main.py  schemas.py
data/: README.md
eval/: __init__.py  runner.py
pipeline/: config.py  db.py  helpers.py  logging.py  phase0_archives.py  phase1_walk.py  phase2_identify.py  phase3_triage.py  phase4_dedup.py  phase5_folder_meta.py  phase6_report.py  phase7_exclude.py
prompts/: generation_v1.txt
rag/: __init__.py  citations.py  filters.py  generation.py  phase10_5_context.py  phase10_chunk.py  phase11_embed.py  phase8_extract.py  phase8b_transcribe.py  phase9_summarize.py  retrieval.py
rag/extractors/: __init__.py  base.py  docling_extractor.py  filename_only_extractor.py  metadata_only_extractor.py  ocr_extractor.py  textutil_extractor.py  tika_extractor.py  whisper_extractor.py
rag/prompts/: contextual_retrieval_v1.txt
seeds/: format_policy.csv
tests/: conftest.py  test_api.py  test_citations.py  test_cli.py  test_config.py  test_db.py  test_e2e_pipeline.py  test_eval_runner.py  test_filters.py  test_generation.py  test_generation_integration.py  test_helpers.py  test_phase0_archives.py  test_phase10_5_context.py  test_phase10_5_context_integration.py  test_phase10_chunk.py  test_phase10_chunk_integration.py  test_phase11_embed.py  test_phase1_walk.py  test_phase2_identify.py  test_phase3_triage.py  test_phase4_dedup.py  test_phase5_folder_meta.py  test_phase6_report.py  test_phase7_exclude.py  test_phase8_extract.py  test_phase8b_transcribe.py  test_phase9_summarize.py  test_phase9_summarize_integration.py  test_retrieval.py  test_retrieval_integration.py  test_schemas.py  test_ui_gradio.py
ui/: BENCHMARK_REPORT.md  DEBUGGING_NOTES.md  GENERATION_MODEL_CHANGE.md  benchmark.py  benchmark_cloud.py  benchmark_compare.py  benchmark_gemma3_debug.py  benchmark_gemma3_variants.py  benchmark_gpt_oss.py  benchmark_interleaved.py  benchmark_num_think.py  benchmark_qwen35.py  gradio_app.py  gradio_app_legacy.py
