[project]
name = "odw-vault"
version = "0.2.0"
description = "ODW.ai Vault — sovereign, self-hosted Retrieval-Augmented Generation (RAG) platform"
requires-python = ">=3.11"
dependencies = [
    "sqlite-utils>=3.36",
    "click>=8.1",
    "pydantic>=2.5",
    "ollama>=0.3",
    "PyMuPDF>=1.24",
    "patool>=2.3",
    "python-magic>=0.4.27",
    "fasttext>=0.9.2",
    "rich>=13.7",
    "tenacity>=8.2",
    "msoffcrypto-tool>=5.4",
    "lingua-language-detector>=2.0.2",
    "chromadb>=0.5",
    "docling>=2.0",
    "tika>=2.6",
    "rank-bm25>=0.2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "gradio>=4.40",
    "sse-starlette>=2.0",
    "tomli-w>=1.0",
    "ocrmypdf>=15.0",
    "pywhispercpp>=1.0",
]

[project.optional-dependencies]
rag = [
    "llama-index>=0.11",
    "llama-index-vector-stores-chroma>=0.2",
    "llama-index-embeddings-ollama>=0.3",
    "llama-index-llms-ollama>=0.3",
    "llama-index-readers-file>=0.1",
]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "datasette>=0.64", "ruff>=0.4"]

[project.scripts]
vault = "cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*", "rag*"]

[tool.setuptools]
py-modules = ["cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pipeline --cov=rag --cov=cli --cov=api --cov=eval --cov=ui --cov-report=term-missing -v"
markers = [
    "real_sf: tests that use the real Siegfried binary (slow, skipped by default)",
    "slow: tests that take more than 5 seconds",
    "e2e: end-to-end pipeline tests",
]

[tool.coverage.run]
source = ["pipeline", "rag", "cli", "api", "eval", "ui"]
omit = ["tests/*", ".venv/*", "ui/benchmark*.py", "ui/gradio_app_legacy.py"]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["pipeline", "rag", "api", "eval", "ui"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line-length (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pipeline", "rag", "api", "eval"]

[tool.ruff.format]
quote-style = "double"
